...
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Colors.white,
      appBar: AppBar(
        backgroundColor: Colors.white,
        title: Text(
          "Edit",
          style: TextStyle(fontWeight: FontWeight.bold, fontSize: 35),
        ),
      ),
      body: Padding(
        padding: const EdgeInsets.all(16),
        child: Column(
...
            Center(
              child: ElevatedButton(
                  onPressed: _updateTask,
                  style:
                      ElevatedButton.styleFrom(backgroundColor: Colors.green),
                  child: Text(
                    "Update",
                    style: TextStyle(color: Colors.white,fontWeight: FontWeight.bold),
                  )),
            )
          ],
        ),
      ),
...
