...
              Row(
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  TextButton(
                      onPressed: loginUserWithEmailAndPassword,
                      child: Text(
                        "Login",
                        style: TextStyle(color: Colors.black),
                      )),
                  TextButton(
                      onPressed: createUserWithEmailAndPassword,
                      child: Text(
                        "Signup",
                        style: TextStyle(color: Colors.black),
                      ))
                ],
              )
            ],
          ),
...
